fix for build failure
Signed-off-by: Bhaktavatsal Reddy <bhamaram@in.ibm.com>