@@ -30,6 +30,8 @@
         <mockito-version>5.21.0</mockito-version>
         <kafka-version>4.2.0</kafka-version>
         <maven-surefire-plugin-version>3.5.2</maven-surefire-plugin-version>
+        <argLine></argLine>
+        <surefireArgLine>-Dnet.bytebuddy.experimental=true</surefireArgLine>
     </properties>
     <dependencies>
         <dependency>
